# HeiTwin-Heuristic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: HeiTwin.cc  utils.cc  utils.hh
src/config/: config.hh  definitions.hh
src/data_structures/: graph.cc  graph.hh  solution.hh
src/reductions/: degone.hh  degzero.hh  paths.hh  red_deg_limit.hh  red_deg_limit_random.hh  reductions.hh  twins.hh
src/solvers/: greedy.hh  greedy_red_deg_limit.hh  greedy_strong.hh  tree_contract.hh  tree_contract_deluxe.hh  tree_contract_deluxe_order.hh
src/strategies/: greedy.cc  greedy.hh  local_search.cc  local_search.hh
